--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,12 @@ body {
     object-fit: cover;
     object-position: center;
 }
+#image-track {
+    display: flex;
+    gap: 4vmin;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(0%, -50%);
+    
+}
