--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     width: 40vmin;
     height: 56vmin;
     object-fit: cover;
-    object-position: center;
+    object-position: center center;
 }
 #image-track {
     display: flex;
