--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: #4a4e69;
     color: white;
     margin: 0rem;
     overflow: hidden;
@@ -19,4 +19,35 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(0%, -50%);
+}
+nav {
+    background-color: #22223b;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+nav li {
+    margin-right: 20px;
+    position: relative;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px 15px;
+    display: block;
+}
+
+nav a:hover {
+    opacity: 0.7;
+}
+
+nav li:hover ~ li {
+    opacity: 0.5;
 }
