--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,83 @@
-.App {
-  text-align: center;
-}
 
 #light {
-  background-color: wheat;
+  background-color: antiquewhite;
 }
 
 #dark {
-  background-color: grey;
+  background-color: aquamarine;
+}
+
+/* Default styles for the body element */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-size:cover;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+/* Styles for the navigation bar */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 0 20px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* Styles for the toggle button */
+.toggle-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+  font-size: 20px;
+  outline: none;
+}
+
+.toggle-button:hover {
+  color: #333;
+}
+
+/* Styles for the dark theme */
+body.dark {
+  background-color: #333;
+  color: #fff;
+}
+
+nav.dark {
+  background-color: #333;
+  color: #fff;
+}
+
+nav.dark ul li a {
+  color: #fff;
+}
+
+.toggle-button.dark {
+  color: #fff;
 }
