--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,117 +17,10 @@ body {
 
 #light {
     background-color: #F8F8F8;
+    color:#1A1A1A;
 }
 
 #dark {
     background-color: #1A1A1A;
     color: #FFFFFF;
 }
-
-/*
-.App {
-    background-color: #F7F7F7;
-    margin: 0;
-    height: 100%;
-    width: 100%;
-}
-*/
-
-/*
-
-.App {
-    font-family: "Ubuntu", sans-serif;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: aquamarine;
-    background-size: cover;
-    padding: 0;
-}
-*/
-
-
-/*
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
-}
-  
-
-#light {
-    background-color: antiquewhite;
-}
-
-#dark {
-    background-color: aquamarine;
-}
-*/
-
-/* Styles for the navigation bar 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 0 20px;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-size: 18px;
-    font-weight: bold;
-}
-*/
-/* Styles for the toggle button 
-.toggle-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    margin-right: 20px;
-    font-size: 20px;
-    outline: none;
-}
-
-.toggle-button:hover {
-    color: #333;
-}
-*/
-/* Styles for the dark theme 
-body.dark {
-    background-color: #333;
-    color: #fff;
-}
-
-nav.dark {
-    background-color: #333;
-    color: #fff;
-}
-
-nav.dark ul li a {
-    color: #fff;
-}
-
-.toggle-button.dark {
-    color: #fff;
-}
-*/
