--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -2,8 +2,8 @@
 nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 16px;
+    /*align-items: center;*/
+    /*padding: 16px;*/
 }
 
 nav ul {
@@ -49,10 +49,10 @@ nav ul li a {
     cursor: pointer;
     background-color: transparent;
     border: none;
-    padding: 15px 32px;
+    /*padding: 15px 32px;*/
     text-align: center;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 3px;
     font-size: 15px;
     display: inline-flex;
     align-items: center;
