--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,46 +1,50 @@
 /* Default styles for the body element */
+
+:root {
+    --background-dark: #39325d;
+    --text-dark: #f8fac6;
+    --background-light: #f8fac6;
+    --text-light: #39325d;
+    --hover-dark: #b4a0cf;
+    --hover-light: #ffd500;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
 
 .App {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    min-height: 100vh;
     transition: color 0.15s ease-in-out;
+    overflow: auto;
 }
 
 .Home {
-    padding-top: 0px;
-    padding: 15px;
-}
-
-.About {
-    padding-top: 0px;
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .Projects {
-    padding-top: 0px;
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .Contact {
-    padding-top: 0px;
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #light {
-    background-color: #F8F8F8;
-    color:#1A1A1A;
+    background-color: var(--background-light);
+    color: var(--text-light);
 }
 
 #dark {
-    background-color: #1A1A1A;
-    color: #FFFFFF;
+    background-color: var(--background-dark);
+    color: var(--text-dark);
 }
